New folder/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris-mlops-app-service
  namespace: mlops
spec:
  selector:
    app: iris-mlops-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 7000
    nodePort: 30007
  type: NodePort
