New folder/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iris-mlops-app-ingress
  namespace: mlops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: iris-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iris-mlops-app-service
            port:
              number: 80
